GPC/tests/examples/fail/redefineVar.gpc


int redefineVar() {
    int x = 5;
    int x = 6; // Cannot redefine
}
